# SparseMatrixVectorMultiplication

./: .gitignore  CMakeLists.txt  Makefile  README.md  clear.sh  matrix.txt  output.txt  project  run.sh
CUDA/headers/: cudacsr.h  cudahll.cuh  cudahll.h
CUDA/kernel/: cudacsr.cu
CUDA/kernel/csr/: cudakernel1.cuh
CUDA/kernel/hll/: cuda_hll_kernel_v1.cuh
CUDA/src/: cudacsr.cu  cudahll.cu
CUDA_include/: cuda_csr_kernel_v1.cuh  cuda_hll_kernel_v1.cuh  cudacsr.h  cudahll.h
CUDA_include/csr/: cuda_csr_kernel_v1.cuh  cuda_csr_kernel_v2.cuh  cuda_csr_kernel_v3.cuh  cuda_csr_kernel_v4.cuh
CUDA_include/hll/: cuda_hll_kernel_v1.cuh  cuda_hll_kernel_v2.cuh  cuda_hll_kernel_v3.cuh  cuda_hll_kernel_v4.cuh
CUDA_src/: cudacsr.cu  cudahll.cu
data/: Cube_Coup_dt0.csv  FEM_3D_thermal1.csv  ML_Laplace.csv  PR02R.csv  adder_dcop_32.csv  af23560.csv  af_1_k101.csv  amazon0302.csv  bcsstk17.csv  cage4.csv  cant.csv  cavity10.csv  cop20k_A.csv  dc1.csv  lung2.csv  mac_econ_fwd500.csv  mcfe.csv  mhd4800a.csv  mhda416.csv  nlpkkt80.csv  olafu.csv  olm1000.csv  raefsky2.csv  rdist2.csv  roadNet-PA.csv  thermal1.csv  thermal2.csv  thermomech_TK.csv  webbase-1M.csv  west2021.csv
data/speedup_single_csv/: speedup_results.csv
src/: main.c  read.c  write.c
src/data_structures/: csr_matix.h  csr_matrix.h  ellpack_block.h  ellpack_matrix.h  hll_matrix.h  matrix.h  performance.h
src/headers/: csr_headers.h  ellpack_headers.h  hll_headers.h  invoke_csr_kernel.h  invoke_hll_kernel.h  matrix.h  matrix_format.h  operation.h  reader_matrix.h
src/implementations/: csr.c  ellpack.c  hll.c  invoke_csr_kernel.c  invoke_hll_kernel.c  operation.c
src/utils/: conversion.c  initialization.c  mmio.c  read.c  reader_matrix.c  utils.c  write.c
src/utils_header/: computation_type.h  initialization.h  mmio.h  utils.h
src_charts_folder/: LAST_PLOT.py  big_little_nz.py  filter_csv.py  filtered_results.csv  histogram_cuda_performance.py  histogram_performance.py  histogram_serial.py  matrici_non_zeri_ordinati.txt
src_charts_folder/efficiency/: efficiency.py
src_charts_folder/performance/: performance_flops.py  performance_flops_single.py  performance_type.py
src_charts_folder/speedup/: speedup_generate_csv.py
src_charts_forlder/: efficiency.py  histogram_performance.py  performance_flops.py  performance_flops_single.py  performance_histogram.py  speedup.py
src_charts_forlder/performance/: performance_flops_single.py
src_charts_forlder/speedup/: speedup_generate_csv.py  speedup_generate_plots.py
